Minor bug fix
Better ScrollPane scrollbar colors (via CSS) and locks keybinds to only initial/default scene.

--- a/src/com/gdjfx/app/main.css
+++ b/src/com/gdjfx/app/main.css
@@ -46,7 +46,7 @@
 
 .scroll-bar:horizontal .track,
 .scroll-bar:vertical .track{
-    -fx-background-color : #FFFFFF;
+    -fx-background-color : #332b51;
     -fx-border-color :transparent;
     -fx-background-radius : 0.0em;
     -fx-border-radius :2.0em;
@@ -83,14 +83,14 @@
 
 .scroll-bar:horizontal .thumb,
 .scroll-bar:vertical .thumb {
-    -fx-background-color :derive(black,90.0%);
+    -fx-background-color : #9e98ae;
     -fx-background-insets : 2.0, 0.0, 0.0;
     -fx-background-radius : 2.0em;
 }
 
 .scroll-bar:horizontal .thumb:hover,
 .scroll-bar:vertical .thumb:hover {
-    -fx-background-color :derive(#4d4c4f,10.0%);
+    -fx-background-color : #6d6b89;
     -fx-background-insets : 2.0, 0.0, 0.0;
     -fx-background-radius : 2.0em;
 }
